# oscd

./: Cargo.toml  README.md  license  noted.md  oscd.rb
.github/workflows/: build.yml  release.yml
src/: main.rs  parser.rs  prompt.rs  scanner.rs  table.rs  task.rs
src/analyser/: lexer.rs  parser.rs  token.rs
src/analysis/: lexer.rs  parser.rs  token.rs
src/lexer/: mod.rs  token.rs
src/osc/: mod.rs  recv.rs  send.rs
