[package]
name = "osc-debugger-rs"
version = "0.1.0"
edition = "2021"
authors = ["karnpapon <karnpapon@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
colored = "2"
nannou_osc = "0.14.0"  
inquire = { version = "0.2.1", features = ["date"] }