[package]
name = "oscd"
version = "0.1.2"
edition = "2021"
authors = ["karnpapon <karnpapon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/karnpapon/oscd"
homepage = "https://github.com/karnpapon/oscd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oscd"
path = "src/main.rs"

[dependencies]
termion = { git = "https://gitlab.redox-os.org/Jezza/termion.git", branch = "windows-support", version = "1.5.5" }
colored = "2"
inquire = { version = "0.2.1"}
rosc = "0.8.1"
clap = "3.2.15"
nom = "7.1.1"
nom_locate = "4.0.0"